external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_bad_name.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_bad_name.move:4:13
  │
4 │         let {};
  │             ^
  │             │
  │             Unexpected '{'
  │             Expected a variable or struct name

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_bad_name.move:4:13
  │
4 │         let {};
  │             ^
  │             │
  │             Unexpected '{'
  │             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

