external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_bad_name.move
module 0x42::M {
    fun f() {
        // Test for a bad variable or struct type name
        let {};
    }
}
